# cxpm

./: .gitignore  CMakeLists.txt  Package.cpp  build-gcc-15.sh  build.sh  compile_commands.json  index.html  install.sh  package.loader.cpp  readme.md  test.sh  uninstall.sh
applications/cxpm/: CMakeLists.txt
applications/cxpm/src/: cxpm.cpp
cpkg-base/: CMakeLists.txt  package.cpp
cpkg-base/src/: AbstractCompiler.hpp  BuildManager.hpp  Compiler.hpp  Launch.hpp.disabled  Package.hpp  Project.hpp  Toolchain.hpp  Variant.cpp  Variant.hpp  main.cpp.in
cpkg-base/src/Controllers/: AbstractCompiler.hpp  ClangdManager.hpp  PkgConfigManager.hpp  Project.hpp  ProjectManager.hpp  Target.hpp  Toolchain.hpp  ToolchainManager.hpp
cpkg-base/src/Core/: Object.hpp
cpkg-base/src/Core/Containers/: String.hpp  Variant.cpp  Variant.hpp
cpkg-base/src/Core/Exceptions/: NotImplementedException.hpp
cpkg-base/src/Core/Logging/: LoggerManager.hpp
cpkg-base/src/Models/: BasicProject.cpp  BasicProject.hpp  BasicTarget.hpp  BasicTargetDescriptor.hpp  BasicToolchain.hpp  CompilerCommandDescriptor.hpp  PackageDescriptor.hpp  ProjectDescriptor.hpp  TargetFactoryInterfaceDescriptor.hpp  Toolchain.hpp  ToolchainArchiveLinkInterface.hpp  ToolchainDescriptor.hpp  ToolchainDescriptorFactoryInterface.hpp  ToolchainSharedObjectLinkInterface.hpp
cpkg-base/src/Models/Commands/: ArchiveCommand.hpp  BasicCommand.hpp  ExecutableCommand.hpp  ObjectCommand.hpp  SharedObjectCommand.hpp
cpkg-base/src/Modules/ProgramOptions/: Option.hpp  OptionDescriptorCollection.hpp  OptionsCollection.hpp
cpkg-base/src/Modules/ProgramOptions/Serialization/: ProgramOptionsOutputSerializer.hpp
cpkg-base/src/Modules/Serialization/: AbstractArchiver.hpp  JsonOutputArchiver.hpp  ValueDescriptor.hpp
cpkg-base/src/Modules/Templating/: MustacheLite.hpp
cpkg-base/src/Serialization/: AbstractArchiver.hpp  JsonOutputArchiver.hpp  ValueDescriptor.hpp
cpkg-base/src/Serializers/: JsonArchiver.hpp
cpkg-base/src/Utils/: Print.hpp  Unused.hpp
cpkg-base/src/Utils/Unix/: EnvironmentManager.hpp  ShellManager.hpp
cpkg-base/src/Views/: ApplicationView.hpp
cpkg-base/test/Controllers/: ClangdManagerTest.cpp
cxpm/: CMakeLists.txt  compile_commands.json  cxpm  package.cpp
cxpm-base/test/Modules/Networking/TCP/: CMakeLists.txt  SocketTest.cpp  URLTest.cpp
cxpm-base/test/Modules/Serialization/JSON/: CMakeLists.txt  InputArchiverTest.cpp  OutputArchiverTest.cpp
cxpm-server/: CMakeLists.txt
cxpm-server/CMakeTemplates/: Config.cmake.in
cxpm-server/src/: main.cpp
cxpm/src/: cxpm.cpp
cxpm/src/CXPM/Controllers/: ClangdManager.hpp  PkgConfigManager.hpp  ProjectManager.hpp  ToolchainManager.hpp
cxpm/src/CXPM/Core/: Object.hpp
cxpm/src/CXPM/Core/Containers/: Collection.hpp  Map.hpp  Set.hpp  String.hpp  Tuple.hpp  Variant.hpp
cxpm/src/CXPM/Core/Exceptions/: NotImplementedException.hpp  RuntimeException.hpp
cxpm/src/CXPM/Core/Functional/: Function.hpp
cxpm/src/CXPM/Core/Logging/: LoggerManager.hpp
cxpm/src/CXPM/Core/Threading/: ThreadPool.hpp
cxpm/src/CXPM/Models/: BuildOutputResult.hpp  Command.hpp  CompilerCommandDescriptor.hpp  ExportToolchain.hpp  PackageDescriptor.hpp  Project.hpp  ProjectDescriptor.hpp  Target.hpp  TargetDescriptor.hpp  Toolchain.hpp  ToolchainArchiveLinkInterface.hpp  ToolchainBasicCommandInterface.hpp  ToolchainBuildInterface.hpp  ToolchainDescriptor.hpp  ToolchainExecutableLinkInterface.hpp  ToolchainInstallInterface.hpp  ToolchainObjectBuildInterface.hpp  ToolchainSharedObjectLinkInterface.hpp
cxpm/src/CXPM/Models/Resources/: SharedObjectSuffix.hpp
cxpm/src/CXPM/Modules/Console/: AbstractApplication.hpp  AbstractConsoleApplication.hpp
cxpm/src/CXPM/Modules/Graphics/: Color.hpp  Colors.hpp
cxpm/src/CXPM/Modules/Logging/: LoggerManager.hpp
cxpm/src/CXPM/Utils/: Print.hpp  Unused.hpp
cxpm/src/CXPM/Views/: ApplicationView.hpp
cxpm/src/Controllers/: ClangdManager.hpp  PkgConfigManager.hpp  ProjectManager.hpp  ToolchainManager.hpp
cxpm/src/Core/: SharedPointer.hpp
cxpm/src/Core/Containers/: Collection.hpp  String.hpp  Tuple.hpp  Variant.hpp
cxpm/src/Core/Exceptions/: RuntimeException.hpp
cxpm/src/Core/Threading/: ThreadPool.hpp
cxpm/src/Models/: BuildOutputResult.hpp  ExportToolchain.hpp  Project.hpp  ProjectDescriptor.hpp  ShellCommandBuilder.hpp  Target.hpp  TargetDescriptor.hpp  TargetFactoryInterfaceDescriptor.hpp  Toolchain.hpp  ToolchainArchiveLinkInterface.hpp  ToolchainBasicCommandInterface.hpp  ToolchainBuildInterface.hpp  ToolchainDescriptor.hpp  ToolchainExecutableLinkInterface.hpp  ToolchainObjectBuildInterface.hpp  ToolchainSharedObjectLinkInterface.hpp
cxpm/src/Modules/Console/: AbstractApplication.hpp  AbstractConsoleApplication.hpp
cxpm/src/Modules/ProgramOptions/: OptionDescriptorCollection.hpp
cxpm/src/Modules/Serialization/: AbstractArchiver.hpp  JsonOutputArchiver.hpp  KeyValueMapDescriptor.hpp  ValueDescriptor.hpp
cxpm/src/Utils/Macros/: DisableMove.hpp  StaticClass.hpp
cxpm/src/Utils/Unix/: EnvironmentManager.hpp  ShellManager.hpp
cxpm/src/Views/: ApplicationView.hpp
libraries/cxpm-interface/: CMakeLists.txt
libraries/cxpm-interface/src/CXPM/: BuildOutputResult.hpp  ClangdManager.hpp  CompilerCommandDescriptor.hpp  PackageDescriptor.hpp  PackageInterface.hpp  PkgConfigManager.hpp  Project.hpp  ProjectDescriptor.hpp  ProjectManager.hpp  ShellCommandBuilder.hpp  Status.hpp  Target.hpp  TargetDescriptor.hpp  TargetInterface.hpp  Toolchain.hpp  ToolchainArchiveLinkInterface.hpp  ToolchainBasicCommandInterface.hpp  ToolchainBuildInterface.hpp  ToolchainDescriptor.hpp  ToolchainDescriptorInterface.hpp  ToolchainExecutableLinkInterface.hpp  ToolchainInstallInterface.hpp  ToolchainInterface.hpp  ToolchainManager.hpp  ToolchainObjectBuildInterface.hpp  ToolchainSharedObjectLinkInterface.hpp
modules/toolchains/g++/: CMakeLists.txt
modules/toolchains/g++/src/: toolchain.cpp
toolchains/g++/: CMakeLists.txt  toolchain.cpp
toolchains/g++/src/: toolchain.cpp
toolchains/gcc/: CMakeLists.txt  toolchain.cpp
toolchains/gcc/src/: toolchain.cpp
(+234 files in other folders)
